# STM32-CMAKE-TEMPLATE

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  L432KC Debug.launch  L432KC.ioc  LICENSE.md  List of Source.sh  README.md  SOURCE.txt  STM32L432KCUX_FLASH.ld  book.toml  getIncludeList.sh  getSourceList.sh  t.c
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-all.yml  build-and-upload.yml  build.yml  build_alpine.yml  build_github.yml  build_ubuntu.yml  mdbook.yml
Application/Inc/: LED.hpp  main.h
Application/Src/: LED.cpp  main.cpp
Core/: STM32L432KCUX_FLASH.ld
Core/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usart.c
CubeMX/: CubeMX.ioc
Docker/: Dockerfile  build.sh
STM32L4_svd/: Release_Notes.htm
STM32L4_svd/Release_Notes_files/: filelist.xml
STM32_svd/: STM32L4x2.svd
cmake/: IncludeList.cmake  IncludeList.txt  STM32G431xx_HAL_PARA.cmake  STM32L432xx_HAL_PARA.cmake  SourceList.cmake  SourceList.txt  gcc-arm-none-eabi.cmake
docs_src/page/: Author.md  Docker.md  Docker_Build.md  Introduction.md  Req_Extension.md  Req_Toolchain.md  SUMMARY.md  Setup_CMakelist.md  Setup_CMakepreset.md  Setup_MCU.md  Setup_Source.md  Setup_Toolchain.md  Using_Build.md  Using_Debug.md  Using_Flash.md
